--- a/package.json
+++ b/package.json
@@ -1,57 +1,65 @@
 {
-  "name": "gulp-template",
+  "name": "assemblity",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "start gulp assemblity ",
   "scripts": {
-    "start": "gulp start",
-    "build": "gulp build --build",
-    "prod": "gulp prod --prod",
-    "html": "gulp hstart",
-    "htmlbuild": "gulp hbuild --build",
-    "htmlprod": "gulp hprod --prod",
-    "fconvert": "gulp fconvret"
+    "start": "gulp",
+    "build": "gulp --prod"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/efimchik/gulp-assembling.git"
+  },
+  "keywords": [
+    "gulp",
+    "html",
+    "scss",
+    "pug",
+    "stylus"
+  ],
+  "author": "gluck",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/efimchik/gulp-assembling/issues"
+  },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "browser-sync": "^2.26.12",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-cheerio": "^1.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-cssbeautify": "^3.0.0",
-    "gulp-file-include": "^2.2.2",
-    "gulp-flatten": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssimport": "^7.0.0",
+    "gulp-csso": "^4.0.1",
+    "gulp-file-include": "^2.3.0",
     "gulp-fonter": "^0.3.0",
+    "gulp-fonter-unx": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-html-prettify": "0.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-notify": "^3.2.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-pug": "^4.0.1",
+    "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sass": "^5.0.0",
+    "gulp-shorthand": "^1.1.0",
+    "gulp-size": "^4.0.1",
     "gulp-stylus": "^2.7.0",
-    "gulp-svgmin": "^3.0.0",
-    "gulp-ttf2woff": "^1.1.1",
-    "gulp-ttf2woff2": "^3.0.0",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-w3c-html-validator": "^2.0.1",
     "gulp-webp": "^4.0.1",
+    "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
-    "gulp-webpcss": "^1.1.1",
-    "imagemin-pngquant": "^9.0.1",
-    "webp-converter": "^2.2.3",
-    "yargs": "^16.0.3"
-  },
-  "dependencies": {}
+    "gulp-webp-html-nosvg": "^1.0.1",
+    "imagemin-pngquant": "^9.0.2",
+    "sass": "^1.43.5",
+    "webpack": "^5.64.4",
+    "webpack-stream": "^7.0.0"
+  }
 }
